// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CityNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="text_city"
      >
        Miasto
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="Miasto"
          name="text_city"
          placeholder="Miasto"
          value="$%Wars_aw"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<CityNameField /> matches snapshot 1`] = `
<input
  class="sc-hBEYos RGiG"
  id="testId"
  label="Miasto"
  name="text_city"
  placeholder="Miasto"
  value=""
/>
`;

exports[`<CityNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="text_city"
      >
        CityName*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="CityName"
          name="text_city"
          placeholder="Miasto*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CityNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="text_city"
      >
        City
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos RGiG"
          id="testId"
          label="City"
          name="text_city"
          placeholder="Miasto"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
